# docs/swagger.yaml
@@ -148,7 +148,7 @@ paths:
     post:
       consumes:
       - multipart/form-data
-      description: Generate Access Token (JWT).
+      description: Store Firebase Cloud Messaging Token.
       parameters:
       - default: Bearer <Add access token here>
         description: Insert your access token
@@ -156,7 +156,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: firebase cloun messaging token
+      - description: firebase cloud messaging token
         in: formData
         name: fcm_token
         required: true
@@ -181,6 +181,45 @@ paths:
           schema:
             $ref: '#/definitions/utils.ErrorRespond'
       summary: Update FCM TOKEN
+      tags:
+      - AccountHandler
+  /v1/update/password:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Generate New Password.
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: new password
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: CREATED_RESPOND
+          schema:
+            $ref: '#/definitions/utils.SuccessRespond'
+        "400":
+          description: BAD_REQUEST_RESPOND
+          schema:
+            $ref: '#/definitions/utils.ErrorRespond'
+        "422":
+          description: UNPROCESSABLE_ENTITY_RESPOND
+          schema:
+            $ref: '#/definitions/utils.ValidationErrorRespond'
+        "500":
+          description: INTERNAL_SERVER_ERROR_RESPOND
+          schema:
+            $ref: '#/definitions/utils.ErrorRespond'
+      summary: Update Password
       tags:
       - AccountHandler
   /v1/users:
